Better fix for menu height on mobile devices

--- a/src/include/require/styles/framework.css
+++ b/src/include/require/styles/framework.css
@@ -1100,7 +1100,7 @@ button .icon svg,
 */
 #dgHamburgerMenuContainer {
   position: fixed;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   pointer-events: none;
   z-index: 1;
@@ -1114,7 +1114,6 @@ button .icon svg,
   left: 0;
   width: 100%;
   height: 100%;
-  min-height: 5000px;
   visibility: hidden;
   opacity: 0;
   transition: 0.3s;
@@ -1177,7 +1176,6 @@ button .icon svg,
   position: absolute;
   left: 0;
   height: 100%;
-  min-height: 5000px;
   background: #ececec;
   pointer-events: auto;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
