--- a/src/styles/hamburger.scss
+++ b/src/styles/hamburger.scss
@@ -4,7 +4,7 @@
 
 #dgHamburgerMenuContainer {
   position: fixed;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   pointer-events: none;
   z-index: 1;
@@ -19,7 +19,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    min-height: 5000px; // hack for mobiles
     visibility: hidden;
     opacity: 0;
     transition: .3s;
@@ -89,7 +88,6 @@
   position: absolute;
   left: 0;
   height: 100%;
-  min-height: 5000px; // hack for mobiles
   background: #ececec;
   pointer-events: auto;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
